Add test fapi_server

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest test_lib_search_sdk.py test_lib_search_sdk_custom_set.py
+        pytest test_lib_search_sdk.py test_lib_search_sdk_custom_set.py test_fapi_server.py
