--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,7 @@
 # https://taskfile.dev
 
 version: "3"
-# this Taskfile
+# this Taskfile helps to prepare docs for publishing on GithubPages
 
 vars:
   GREETING: |-
