--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,5 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python fapi_server.py &
-        tests/pytest test_lib_search_sdk.py tests/test_lib_search_sdk_custom_set.py tests/test_fapi_server.py
+        pytest tests/test_lib_search_sdk.py tests/test_lib_search_sdk_custom_set.py tests/test_fapi_server.py
